--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sanitize-html": "^2.11.0"
   },
   "name": "socialmedia-platform",
   "description": "",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "db.js",
   "scripts": {
     "auto": "nodemon db.js",
     "test": "echo \"Error: no test specified\" && exit 1"
