--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "nodemon": "^3.0.1",
     "sanitize-html": "^2.11.0"
