--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "dependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "axios": "^1.4.0",
+    "babel": "^6.23.0",
+    "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
+    "clean-webpack-plugin": "^4.0.0",
     "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "html-webpack-harddisk-plugin": "^2.0.0",
     "jsonwebtoken": "^9.0.1",
+    "mailersend": "^2.2.0",
     "mongodb": "^5.7.0",
     "nodemon": "^3.0.1",
-    "sanitize-html": "^2.11.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "sanitize-html": "^2.11.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "name": "socialmedia-platform",
   "description": "",
@@ -14,7 +29,9 @@
   "main": "db.js",
   "scripts": {
     "auto": "nodemon db.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "reactAuto": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -25,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/Dazannah/socialmedia-platform/issues"
   },
-  "homepage": "https://github.com/Dazannah/socialmedia-platform#readme"
+  "homepage": "https://github.com/Dazannah/socialmedia-platform#readme",
+  "devDependencies": {
+    "webpack-dev-server": "^4.15.1"
+  }
 }
