--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "main": "db.js",
   "scripts": {
     "auto": "nodemon db.js",
-    "reactAuto": "webpack",
+    "dev": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/Dazannah/socialmedia-platform#readme",
   "devDependencies": {
+    "use-immer": "^0.9.0",
     "webpack-dev-server": "^4.15.1"
   }
 }
