--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
     "clean-webpack-plugin": "^4.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.18.2",
