--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "axios": "^1.4.0",
     "babel": "^6.23.0",
     "babel-loader": "^9.1.3",
@@ -14,7 +15,6 @@
     "fs-extra": "^11.1.1",
     "html-webpack-harddisk-plugin": "^2.0.0",
     "jsonwebtoken": "^9.0.1",
-    "mailersend": "^2.2.0",
     "mongodb": "^5.7.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
